tests/ui/variable_bits/size_too_large.stderr
error: bits sizes cannot exceed 128 bits
 --> tests/ui/variable_bits/size_too_large.rs:4:11
  |
4 | #[bits(8, 256)]  // 256 > 128 bits max
  |           ^^^
